--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "nodemon server/app.js --watch server",
     "start": "node server/app.js",
     "build": "next build",
-    "deploy": "now --public",
-    "alias": "now alias",
-    "remove:deploy": "now rm next-connect"
+    "heroku-postbuild": "next build"
   },
   "keywords": [],
   "author": "",
